# hat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
examples/blinky/: Cargo.toml
examples/blinky/.cargo/: config
examples/blinky/src/: main.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
examples/philosophers/: Cargo.toml
examples/philosophers/src/: main.rs  philosophers.rs
examples/serial/: Cargo.toml
examples/serial/src/: main.rs
src/: delay.rs  executor.rs  lib.rs  main.rs  mutex.rs  prelude.rs  task.rs  time_manager.rs  waker.rs  yield_future.rs
src/common/: executor.rs  lazy.rs  logger.rs  mod.rs  result.rs  task.rs  timer.rs  waker.rs
src/futures/: channel.rs  mod.rs  mutex.rs  semaphore.rs  time.rs  trigger.rs
src/hat-macros/: Cargo.toml
src/hat-macros/src/: entry_macro.rs  lib.rs
src/hat-macros/template/: cortex_m.rs  hat_main.rs
src/no_std/: alloc_rtos.rs  alloc_rust.rs  arc.rs  blocking_channel.rs  blocking_mutex.rs  mod.rs  peripheral.rs  timer.rs
src/peripherals/: gpio.rs  mod.rs
src/std/: blocking_channel.rs  mod.rs  peripheral.rs  timer.rs
src/zbus/: backend.rs  channel.rs  error.rs  mod.rs  observers.rs  subscriber.rs
src/zbus/no_std/: ffi.rs  mod.rs
src/zbus/no_std/backend/: mod.rs  work_queue.rs
src/zbus/no_std/work_queue_backend/: backend.rs  claimer.rs  mod.rs  notifier.rs  publisher.rs  reader.rs  waiter.rs
tests/: blinky  helloworld  serial  stm32f413.repl  stm32f413.resc  tests.robot
tests/no_std/: .gitignore  CMakeLists.txt  prj.conf  setup_nrf52840.resc
tests/no_std/rust/: CMakeLists.txt  Cargo.toml
tests/no_std/rust/src/: lib.rs  zbus_channels.rs
tests/no_std/src/: main.c
