[package]
name = "hat"
version = "0.0.1"
authors = ["Matheus T. dos Santos <tenoriomatheus0@gmail.com>"]
edition = "2021"
repository = "https://github.com/RustAsyncRT/rart-rs"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/rart-rs"
keywords = ["async", "embedded", "no-std"]
categories = ["asynchronous", "embedded", "no-std"]
description = "An async runtime to use the benefits of the availables embedded OS"

[workspace]
members = ["tests/no_std/rust"]

[dependencies]
heapless = "0.7.10"
const_format = "0.2.26"
panic-halt = "0.2.0"
chrono = { version = "0.4.19", default_features = false }
hat-macros = { path = "src/hat-macros", version = "0.0.1" }

[features]
std = ["chrono/default"]
peripherals = []
zbus = []
