[package]
name = "hat"
version = "0.1.0"
authors = ["Matheus T. dos Santos <tenoriomatheus0@gmail.com>"]
edition = "2021"
repository = "https://github.com/matheuswhite/hat-rs"
license-file = "LICENSE"
readme = "README.md"
keywords = ["async", "embedded", "no-std"]
categories = ["asynchronous", "embedded", "no-std"]
description = "A minimal async runtime for embedded systems"

[workspace]

[lib]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
embedded-alloc = "0.5.0"
critical-section = "1.1.0"
stm32f4xx-hal = { version = "0.15.0", features = ["stm32f413"] }
embedded-hal = { version = "0.2.7" }
hat-macros = { path = "src/hat-macros", version = "0.1.0" }
