[package]
name = "serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hat = { version = "0.1.0", git = "https://github.com/matheuswhite/hat-rs" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-alloc = "0.5.0"
critical-section = "1.1.0"

# Change it to your MCU HAL
stm32f4xx-hal = { version = "0.15.0", features = ["stm32f413"] }
